--- a/index.html
+++ b/index.html
@@ -13,68 +13,70 @@
 </head>
 
 <body>
+  <div class="container">
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
-<header>
-  <nav>
-    <a href="services.html">Services</a>
-    <a href="#">Product</a>
-    <a href="#">Vision</a>
-    <a href="#">Features</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
-  </nav>
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-</header>
+  <header>
+    <nav>
+      <a href="services.html">Services</a>
+      <a href="#">Product</a>
+      <a href="#">Vision</a>
+      <a href="#">Features</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </nav>
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  </header>
 
-<section class="second-header">
-    <div class="top">
-      <h1> Innovation<br>On<br>Demand<br></h1>
+  <section class="second-header">
+      <div class="top">
+        <div class="top-text">
+          <h1> Innovation<br>On<br>Demand<br></h1>
+          <button>Get Started</button> 
+        </div>
+        <img class="Circle" src="img/header-img.png" alt="Image of a code snippet.">
+      </div> 
+  </section>
 
-      <button>Get Started</button> 
-      <img class="Circle" src="img/header-img.png" alt="Image of a code snippet.">
-    </div> 
-</section>
+  <div class="top-container">
+    <div class="top-bottom">
+      <h2>Features</h2> 
+      <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
 
-<div class="top-container">
-  <div class="top-bottom">
-    <h2>Features</h2> 
-    <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    <div class="top-bottom">
+      <h2>About</h2>
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </div>
+  </div> 
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+  <section class="spv">
+      <div class="bottom-content">
+        <h2>Services</h2>
+          <p class="bottom-p"> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+
+      <div class="bottom-content">
+        <h2>Product</h2> 
+          <p class="bottom-p"> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+
+      <div class="bottom-content">  
+      <h2>Vision</h2> 
+          <p class="bottom-p"> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+  </section> 
+
+  <footer>
+    <h2>Contact</h2> 
+      <address>
+      <p>123 Way 456 Street<br>Somewhere, USA</p>
+      <p>1 (888) 888-8888</p>
+      <p>sales@greatidea.io</p>
+      </address>
+        <h6>&copy;Copyright Great Idea! 2018</h6>
+    </footer> 
   </div>
-  
-  <div class="top-bottom">
-    <h2>About</h2>
-    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-  </div>
-</div> 
-  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-
-<section class="spv">
-    <div class="bottom-content">
-      <h2>Services</h2>
-        <p class="bottom-p"> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </div>
-
-    <div class="bottom-content">
-      <h2>Product</h2> 
-        <p class="bottom-p"> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </div>
-
-    <div class="bottom-content">  
-    <h2>Vision</h2> 
-        <p class="bottom-p"> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </div>
-</section> 
-
-<footer>
-  <h2>Contact</h2> 
-    <address>
-    <p>123 Way 456 Street<br>Somewhere, USA</p>
-    <p>1 (888) 888-8888</p>
-    <p>sales@greatidea.io</p>
-    </address>
-      <h6>&copy;Copyright Great Idea! 2018</h6>
-  </footer> 
-
 </body>
 </html>
 
